<?xml version="1.0" encoding="utf-8"?>
<!-- //ADD-S BMT S.Oyama 2024/11/19 フタバ双方向向け改修 -->
<layout
    android:id="@+id/fragment_menu_auto_daily_report"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.driver_code.DriverCodeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="jp.mcapps.android.multi_payment_terminal.ui.menu.MenuViewModel" />
        <variable
            name="sharedViewModel"
            type="jp.mcapps.android.multi_payment_terminal.SharedViewModel" />
        <variable
            name="handlers"
            type="jp.mcapps.android.multi_payment_terminal.ui.menu.MenuEventHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_menu_auto_daily_report_fuel"
            android:text="@string/btn_auto_daily_report_fuel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_auto_daily_report_break"
            style="@style/StyleBusinessButton"
            android:onClick='@{v -> handlers.navigateToAutoDailyReportFuel(v)}'
            android:enabled="@{viewModel.isKUUSHA ? true : false}"
            />

        <Button
            android:id="@+id/btn_menu_auto_daily_report_break"
            android:text="@string/btn_auto_daily_report_break"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/btn_menu_auto_daily_report_fuel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_auto_daily_report_numberofpeople"

            style="@style/StyleBusinessButtonDisabled"/>

        <Button
            android:id="@+id/btn_menu_auto_daily_report_numberofpeople"
            android:text="@string/btn_auto_daily_report_numberofpeople"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/btn_menu_auto_daily_report_break"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_auto_daily_report_stopby"
            style="@style/StyleBusinessButtonDisabled"/>

        <Button
            android:id="@+id/btn_menu_auto_daily_report_stopby"
            android:text="@string/btn_auto_daily_report_stopby"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/btn_menu_auto_daily_report_numberofpeople"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_auto_daily_report_metercheck"
            style="@style/StyleBusinessButtonDisabled"/>
        <!-- //ADD-S BMT S.Oyama 2025/03/14 フタバ双方向向け改修 -->
        <Button
            android:id="@+id/btn_menu_auto_daily_report_metercheck"
            android:text="@string/btn_auto_daily_report_metercheck"
            app:layout_constraintTop_toBottomOf="@id/btn_menu_auto_daily_report_stopby"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_auto_daily_report_errorclear"
            style="@style/StyleBusinessButton"
            android:onClick='@{v -> handlers.navigateToAutoDailyReportMeterCheck(v, sharedViewModel)}'
            android:enabled="@{viewModel.isKUUSHA ? true : false}"
            />
        <Button
            android:id="@+id/btn_menu_auto_daily_report_errorclear"
            android:text="@string/btn_auto_daily_report_errorclear"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@id/btn_menu_auto_daily_report_metercheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/StyleBusinessButton"
            android:onClick='@{v -> handlers.navigateToAutoDailyReportErrorClear(v, sharedViewModel)}'
            />

        <!-- //ADD-E BMT S.Oyama 2025/03/14 フタバ双方向向け改修 -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
<!-- //ADD-E BMT S.Oyama 2024/11/19 フタバ双方向向け改修 -->
