<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.driver_code.DriverCodeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="jp.mcapps.android.multi_payment_terminal.ui.menu.MenuViewModel" />
        <variable
            name="handlers"
            type="jp.mcapps.android.multi_payment_terminal.ui.menu.MenuEventHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_menu_history_transaction"
            android:text="@string/btn_history_transaction"
            android:onClick='@{view -> handlers.navigateMain(view, @id/action_navigation_menu_to_navigation_history_transaction)}'
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_history_validation_check"
            style="@style/StyleHistoryButton"/>

        <!-- 表示/非表示、名称はセンターから配信 -->
        <Button
            android:id="@+id/btn_menu_history_validation_check"
            android:onClick='@{view -> handlers.navigateMain(view, @id/action_navigation_menu_to_navigation_history_validation_check)}'
            app:layout_constraintTop_toBottomOf="@id/btn_menu_history_transaction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_history_daily_total"
            style="@style/StyleHistoryButton"/>

        <Button
            android:id="@+id/btn_menu_history_daily_total"
            android:text="@{viewModel.AggregateTitle}"
            android:onClick='@{view -> handlers.navigateToAggregate(view)}'
            android:enabled="@{viewModel.isKUUSHA ? true : false}"
            app:layout_constraintTop_toBottomOf="@id/btn_menu_history_validation_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_history_error"
            style="@style/StyleHistoryButton"/>

        <Button
            android:id="@+id/btn_menu_history_error"
            android:text="@string/btn_history_error"
            android:onClick='@{view -> handlers.navigateMain(view, @id/action_navigation_menu_to_navigation_history_error)}'
            app:layout_constraintTop_toBottomOf="@id/btn_menu_history_daily_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_history_operation"
            style="@style/StyleHistoryButton"/>

        <Button
            android:id="@+id/btn_menu_history_operation"
            android:text="@string/btn_history_operation"
            android:onClick='@{view -> handlers.navigateMain(view, @id/action_navigation_menu_to_navigation_history_operation)}'
            app:layout_constraintTop_toBottomOf="@id/btn_menu_history_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_history_radio"
            style="@style/StyleHistoryButton"/>

        <Button
            android:id="@+id/btn_menu_history_radio"
            android:text="@string/btn_history_radio"
            android:onClick='@{view -> handlers.navigateMain(view, @id/action_navigation_menu_to_navigation_history_radio_for_user)}'
            app:layout_constraintTop_toBottomOf="@id/btn_menu_history_operation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/StyleHistoryButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
